--- a/style.css
+++ b/style.css
@@ -20,8 +20,10 @@ nav {
     color: #8447E9;
 }
 
-.nav_items {
-    
+.nav_items ul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
 }
 
 .nav_items li {
@@ -30,8 +32,8 @@ nav {
     font-weight: 500;
     letter-spacing: -5%;
     line-height: 20px;
-    display: inline;
-    padding: 0 8px;
+    display: flex;
+    justify-content: center;
     color: #0f0f0f;
 }
 
@@ -667,7 +669,7 @@ nav {
 }
 
 * {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 0;
     margin: 0;
 }
