--- a/style.css
+++ b/style.css
@@ -17,13 +17,12 @@ nav {
     letter-spacing: -0.155em;
     line-height: 38px;
     color: #8447E9;
+    cursor: pointer;
 }
 
 .nav_items ul{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
     gap: 24px;
-    margin-left: 48px;
 }
 
 .nav_items li {
@@ -85,13 +84,17 @@ nav {
 
 #hero {
     text-align: center;
-    /* height: 550px; */
     padding: 158px 0 100px;
 }
 
 #hero_content {
-    width: 50%;
+    width: 660px;
     max-width: 1300px;
+    margin: auto;
+}
+
+.hero_text_content {
+    max-width: 100%;
     margin: auto;
 }
 
@@ -104,7 +107,7 @@ nav {
 
 #hero_span img {
     width: 100%;
-    margin-top: 4px;
+    margin-top: 3px;
 }
 
 .hero_text_content h1 {
@@ -177,7 +180,6 @@ nav {
 }
 
 #brands {
-    /* height: 518px; */
     padding: 88px 40px;
 }
 
@@ -233,7 +235,7 @@ nav {
 }
 
 #services {
-    padding: 88px 180px 136px;
+    padding: 88px 70px 136px;
 }
 
 #services_content h2 {
@@ -258,7 +260,7 @@ nav {
 .service_cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 64px 38px;
+    gap: 64px 90px;
     margin-bottom: 64px;
     cursor: pointer;
 }
@@ -310,14 +312,14 @@ nav {
     border: 1px solid #8447E9;
     color: #8447E9;
     background: none;
-    position: absolute;
-    left: 75.2%;
+    position: relative;
+    left: 78.5%;
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
     letter-spacing: -0.05em;
-    margin-top: -65px;
+    margin-top: -132px;
     transition: ease-in-out 300ms;
     cursor: pointer;
 }
@@ -331,12 +333,12 @@ nav {
 }
 
 #work {
-    padding: 136px 180px;
+    padding: 136px 80px;
     background-color: #8447E9;
 }
 
 #work_content {
-    max-width: 1200px;
+    max-width: 1080px;
     margin: auto;
 }
 
@@ -357,7 +359,7 @@ nav {
     line-height: 40px;
     letter-spacing: -0.04em;
     text-align: left;
-    width: 80%;
+    width: 85%;
     color: #F5F5F5;
     margin-bottom: 88px;
 }
@@ -445,10 +447,10 @@ nav {
 }
 
 #customers {
-    padding: 120px 200px;
+    padding: 120px 150px;
 }
 
-#customer_content {
+#customers_content {
     max-width: 1200px;
     margin: auto;
 }
@@ -459,7 +461,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 32px 36px;
-    max-width: 800px;
+    max-width: 1200px;
     margin: auto;
 }
 
@@ -619,6 +621,9 @@ nav {
     position: relative;
     padding: 88px 180px 50px;
     margin-bottom: -240px;
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #banner_content {
@@ -668,11 +673,13 @@ nav {
     /* background-color: #a9a3a3; */
     padding: 332px 180px 0;
     background: url(./icons/wave.svg);
+    background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
 }
 
 #footer_content {
+    max-width: 1080px;
     margin: auto;
 }
 
@@ -769,6 +776,10 @@ nav {
         margin-top: 24px;
     }
 
+    #services_content h2 {
+        width: 75%;
+    }
+
     #work {
         padding: 136px 96px;
     }
@@ -790,8 +801,84 @@ nav {
     }
 }
 
+@media (max-width: 768px) {
+    .nav_items {
+        visibility: hidden;
+    }
+
+    .brands_logos {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 24px;
+        width: 100%;
+    }
+
+    .brands_logos img {
+        width: auto;
+    }
+
+    #services_content h2 {
+        font-size: 32px;
+        width: 85%;
+    }
+
+    .service_title {
+        font-size: 28px;
+    }
+
+    .service_cards {
+        gap: 32px 32px;
+    }
+
+    .service_img {
+        width: 45%;
+        margin-bottom: 28px;
+    }
+
+    #services {
+        padding: 88px 67px 136px;
+    }
+
+    #work {
+        padding: 85px 60px;
+    }
+
+    .work_text_content h3 {
+        font-size: 28px;
+        line-height: 32px;
+        width: 100%;
+        margin-bottom: 60px;
+    }
+
+    .work_cards {
+        margin-bottom: 60px;
+    }
+
+    #customers {
+        padding: 80px 60px;
+    }
+
+    .customers_card {
+        background-color: #E1DBF6;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .customers_text_content {
+        margin-bottom: 60px;
+        margin-right: 0;
+    }
+
+    .customer_avi {
+        margin-bottom: 40px;
+        border-radius: 1000px;
+    }
+}
+
 * {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     padding: 0;
     margin: 0;
 }
